// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration test babel_root_import_prj 1`] = `
"
// id: src/feat-a/index.js

import { awesome } from '~/feat-b/util';

awesome();

// id: src/feat-b/util.js

export function awesome() {
  return 'awesome!';
}"
`;

exports[`integration test css_modules_prj 1`] = `
"
// id: src/app.jsx

import React from 'react';
import { render } from 'react-dom';
import Hoge from 'components/Fuga/Fuga';

render(<Hoge />, document.getElementById('app'));

// id: src/components/Fuga/Fuga.css

.root {
  color: red;
}


// id: src/components/Fuga/Fuga.jsx

import styles from '../Hoge/Hoge.css';
import cx from 'classnames';

const Hoge = () => <div className={cx.root}>
    This is Hoge component
  </div>;

export default Hoge;

// id: src/components/Hoge/Hoge.jsx

import styles from '../Fuga/Fuga.css';
import cx from 'classnames';

const Hoge = () => <div className={cx.root}>
    This is Hoge component
  </div>;

export default Hoge;"
`;

exports[`integration test simple_babel_prj 1`] = `
"
// id: src/core/index.js

import { someFn } from '../feat/dest';

export default function main() {
  someFn();
}

// id: src/feat/dest.js

import { util } from '../core/dependee';

export function someFn() {
  util();
  return 'test';
}"
`;

exports[`integration test simple_babel_prj(keep filename) 1`] = `
"
// id: src/core/index.js

import { someFn } from '../feat/target';

export default function main() {
  someFn();
}

// id: src/feat/target.js

import { util } from '../core/dependee';

export function someFn() {
  util();
  return 'test';
}"
`;
